--- a/elizabot/templates/elizabot/base.html
+++ b/elizabot/templates/elizabot/base.html
@@ -1,13 +1,13 @@
 {% load static %}
-<HTML>
-<HEAD>
-	<TITLE>Eliza (elizabot.js)</TITLE>
+<!doctype html>
+<head>
+<title>Eliza (elizabot.js)</title>
 
-	<!-- JavaScript -->
-	<script src="{% static 'elizabot/js/elizabot.js' %}"></script>
-	<script src="{% static 'elizabot/js/elizadata.js' %}"></script>
+<!-- JavaScript -->
+<script src="{% static 'elizabot/js/elizabot.js' %}"></script>
+<script src="{% static 'elizabot/js/elizadata.js' %}"></script>
 
-<SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript">
+<script language="JavaScript" TYPE="text/javascript">
 <!--
 
 var eliza = new ElizaBot();
@@ -59,13 +59,13 @@ function elizaStep() {
 }
 
 //-->
-</SCRIPT>
-</HEAD>
+</script>
+</head>
 
-<BODY TOPMARGIN="0" LEFTMARGIN="0" RIGHTMARGIN="0" BOTTOMMARGIN="0" MARGINHEIGHT="0" MARGINWIDTH="0" STYLE="border:0" onload="window.setTimeout('elizaReset()',100)"><A NAME="top"></A>
+<body TOPMARGIN="0" LEFTMARGIN="0" RIGHTMARGIN="0" BOTTOMMARGIN="0" MARGINHEIGHT="0" MARGINWIDTH="0" STYLE="border:0" onload="window.setTimeout('elizaReset()',100)"><A NAME="top"></A>
 
-{% block content %}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
 
-</BODY>
-</HTML>
+</body>
+</html>
