japanize language chenge

--- a/elizabot/templates/elizabot/base.html
+++ b/elizabot/templates/elizabot/base.html
@@ -32,7 +32,7 @@ function elizaStep() {
 		return;
 	}
 	else if (userinput != '') {
-		var usr = 'YOU:   ' + userinput;
+		var usr = 'あなた:   ' + userinput;
 		var rpl ='ELIZA: ' + eliza.transform(userinput);
 		elizaLines.push(usr);
 		elizaLines.push(rpl);
