--- a/elizabot/templates/elizabot/base.html
+++ b/elizabot/templates/elizabot/base.html
@@ -37,7 +37,7 @@ function elizaStep() {
 		elizaLines.push(usr);
 		elizaLines.push(rpl);
 		// display nicely
-		// (fit to textarea with last line free - reserved for extra line caused by word wrap)
+		// (最終行を空にしてテキストエリアに合わせる-単語の折り返しによる余分な行のために予約されています)
 		var temp  = new Array();
 		var l = 0;
 		for (var i=elizaLines.length-1; i>=0; i--) {
